[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/GUI/Theme/Menu.tres" type="Theme" id=1]
[ext_resource path="res://src/Hub/Challenges/ChallengeChoice.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Hub/Challenges/ChallengeSelect.gd" type="Script" id=3]
[ext_resource path="res://assets/GUI/Theme/CatCafe.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/GUI/Icons/star.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/Icons/star-gold.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="ChallengeSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -294.0
margin_right = 150.0
margin_bottom = 294.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="Buttons"]
margin_right = 300.0
margin_bottom = 37.0
text = "World 1 Challenges"
align = 1

[node name="Mission1" parent="Buttons" instance=ExtResource( 2 )]
margin_top = 53.0
margin_bottom = 153.0

[node name="Mission2" parent="Buttons" instance=ExtResource( 2 )]
margin_top = 169.0
margin_bottom = 269.0
disabled = true

[node name="TrophyIcon" parent="Buttons/Mission2/Info/Records" index="0"]
texture = ExtResource( 5 )

[node name="Mission3" parent="Buttons" instance=ExtResource( 2 )]
margin_top = 285.0
margin_bottom = 385.0
disabled = true

[node name="TrophyIcon" parent="Buttons/Mission3/Info/Records" index="0"]
texture = ExtResource( 6 )

[node name="Label2" type="Label" parent="Buttons"]
margin_top = 401.0
margin_right = 300.0
margin_bottom = 442.0
custom_fonts/font = SubResource( 1 )
text = "Clear higher ranked challenges for higher level loot rewards!"
align = 1
autowrap = true

[node name="Scroll" type="HBoxContainer" parent="Buttons"]
margin_top = 458.0
margin_right = 300.0
margin_bottom = 521.0
custom_constants/separation = 0
alignment = 1

[node name="Left" type="Button" parent="Buttons/Scroll"]
margin_left = 5.0
margin_right = 45.0
margin_bottom = 63.0
rect_min_size = Vector2( 40, 40 )
text = "<"

[node name="Label3" type="Label" parent="Buttons/Scroll"]
margin_left = 45.0
margin_right = 255.0
margin_bottom = 63.0
rect_min_size = Vector2( 210, 0 )
custom_fonts/font = SubResource( 1 )
text = "Complete more Campaign missions to unlock new challenges!"
align = 1
autowrap = true

[node name="Right" type="Button" parent="Buttons/Scroll"]
margin_left = 255.0
margin_right = 295.0
margin_bottom = 63.0
rect_min_size = Vector2( 40, 40 )
text = ">"

[node name="Close" type="CenterContainer" parent="Buttons"]
margin_top = 537.0
margin_right = 300.0
margin_bottom = 587.0

[node name="Close" type="Button" parent="Buttons/Close"]
margin_left = 50.0
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Close"

[connection signal="pressed" from="Buttons/Mission1" to="." method="_on_Mission1_pressed"]
[connection signal="pressed" from="Buttons/Mission2" to="." method="_on_Mission2_pressed"]
[connection signal="pressed" from="Buttons/Mission3" to="." method="_on_Mission3_pressed"]
[connection signal="pressed" from="Buttons/Scroll/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Buttons/Scroll/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Buttons/Close/Close" to="." method="_on_Close_pressed"]

[editable path="Buttons/Mission1"]
[editable path="Buttons/Mission2"]
[editable path="Buttons/Mission3"]
